--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,5 +1,43 @@
 @tailwind base;
-
 @tailwind components;
-
 @tailwind utilities;
+
+.theme-blue {
+  --color-primary: theme("colors.blue.300");
+  --color-secondary: theme("colors.blue.500");
+}
+
+.theme-green {
+  --color-primary: theme("colors.green.500");
+  --color-secondary: theme("colors.green.700");
+}
+
+.theme-pink {
+  --color-primary: theme("colors.pink.700");
+  --color-secondary: theme("colors.pink.500");
+}
+
+.theme-gray {
+  --color-primary: theme("colors.gray.500");
+  --color-secondary: theme("colors.gray.700");
+}
+
+.theme-red {
+  --color-primary: theme("colors.red.400");
+  --color-secondary: theme("colors.red.600");
+}
+
+.theme-yellow {
+  --color-primary: theme("colors.yellow.500");
+  --color-secondary: theme("colors.yellow.300");
+}
+
+.theme-purple {
+  --color-primary: theme("colors.purple.900");
+  --color-secondary: theme("colors.purple.700");
+}
+
+.theme-black {
+  --color-primary: theme("colors.gray.900");
+  --color-secondary: theme("colors.gray.800");
+}
