--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -2,42 +2,105 @@
 @tailwind components;
 @tailwind utilities;
 
-.theme-blue {
-  --color-primary: theme("colors.blue.300");
-  --color-secondary: theme("colors.blue.500");
-}
+@layer base {
+  @font-face {
+    font-family: "arista";
+    src: url('./fonts/Arista2.0.ttf');
+  }
+  @font-face {
+    font-family: "ataristocrat";
+    src: url('./fonts/ATARISTOCRAT.ttf');
+  }
+  @font-face {
+    font-family: "bungee";
+    src: url('./fonts/Bungee-Regular.otf');
+  }
+  @font-face {
+    font-family: "geosanslight";
+    src: url('./fonts/GeosansLight.ttf');
+  }
+  @font-face {
+    font-family: "leaguespartan";
+    src: url('./fonts/LeagueSpartan-Bold.otf');
+  }
+  @font-face {
+    font-family: "oswald";
+    src: url('./fonts/Oswald-Regular.ttf');
+  }
+  @font-face {
+    font-family: "uroob";
+    src: url('./fonts/Uroob-Regular.ttf');
+  }
+  @font-face {
+    font-family: "yrsa";
+    src: url('./fonts/Yrsa-SemiBold.ttf');
+  }
 
-.theme-green {
-  --color-primary: theme("colors.green.500");
-  --color-secondary: theme("colors.green.700");
-}
+  .theme-blue {
+    --color-primary: theme("colors.blue.400");
+    --color-secondary: theme("colors.blue.600");
+  }
 
-.theme-pink {
-  --color-primary: theme("colors.pink.700");
-  --color-secondary: theme("colors.pink.500");
-}
+  .theme-green {
+    --color-primary: theme("colors.green.500");
+    --color-secondary: theme("colors.green.700");
+  }
 
-.theme-gray {
-  --color-primary: theme("colors.gray.500");
-  --color-secondary: theme("colors.gray.700");
-}
+  .theme-pink {
+    --color-primary: theme("colors.pink.700");
+    --color-secondary: theme("colors.pink.500");
+  }
 
-.theme-red {
-  --color-primary: theme("colors.red.400");
-  --color-secondary: theme("colors.red.600");
-}
+  .theme-gray {
+    --color-primary: theme("colors.gray.500");
+    --color-secondary: theme("colors.gray.700");
+  }
 
-.theme-yellow {
-  --color-primary: theme("colors.yellow.500");
-  --color-secondary: theme("colors.yellow.300");
-}
+  .theme-red {
+    --color-primary: theme("colors.red.400");
+    --color-secondary: theme("colors.red.600");
+  }
 
-.theme-purple {
-  --color-primary: theme("colors.purple.900");
-  --color-secondary: theme("colors.purple.700");
-}
+  .theme-yellow {
+    --color-primary: theme("colors.yellow.500");
+    --color-secondary: theme("colors.yellow.300");
+  }
 
-.theme-black {
-  --color-primary: theme("colors.gray.900");
-  --color-secondary: theme("colors.gray.800");
+  .theme-purple {
+    --color-primary: theme("colors.purple.900");
+    --color-secondary: theme("colors.purple.700");
+  }
+
+  .theme-black {
+    --color-primary: theme("colors.gray.900");
+    --color-secondary: theme("colors.gray.800");
+  }
+
+  .font-sans {
+    --title-font: sans;
+  }
+  .font-arista {
+    --title-font: arista;
+  }
+  .font-ataristocrat {
+    --title-font: ataristocrat;
+  }
+  .font-bungee {
+    --title-font: bungee;
+  }
+  .font-geosanslight {
+    --title-font: geosanslight;
+  }
+  .font-leaguespartan {
+    --title-font: leaguespartan;
+  }
+  .font-oswald {
+    --title-font: oswald;
+  }
+  .font-uroob {
+    --title-font: uroob;
+  }
+  .font-yrsa {
+    --title-font: yrsa;
+  }
 }
